fix: to align social icons vertically on profile page

--- a/src/components/DesignerProfile/TopPart/styles.module.scss
+++ b/src/components/DesignerProfile/TopPart/styles.module.scss
@@ -127,19 +127,17 @@
 
   .socialIcons {
     position: absolute;
-    width: 25vw;
-    height: 12vw;
+    width: 7vw;
+    height: 40vw;
     right: 0;
     top: 27vw;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-end;
+    flex-direction: column;
 
     a {
       width: 4.3vw;
       height: 4.3vw;
-      margin-right: 2vw;
+      margin-bottom: 2vw;
 
       &:nth-of-type(3) {
         margin-right: 4vw;
